# OwlAprilTagProcessor

./: .gitignore  CMakeLists.txt
src/: AprilTagData.cpp  AprilTagData.h  GetImage.cpp  GetImage.h  OwlLog.cpp  OwlLog.h  SendResult.h  main.cpp
src/AprilTagData/: AprilTagData.cpp  AprilTagData.h
src/ConfigLoader/: TagConfigLoader.cpp  TagConfigLoader.h  example.json
src/GetImage/: GetImage.cpp  GetImage.h
src/OwlLog/: OwlLog.cpp  OwlLog.h
src/SendResult/: SendResult.cpp  SendResult.h
src/TagProcessor/: TagProcessor.cpp  TagProcessor.h
